# cuda2hip-porting-kit

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: api-mapping.md  common-patterns.md  design.md  porting-guide.md  porting-notes.md
examples/: saxpy.cpp  saxpy.cu
scripts/: diff_check.py  port.py
