[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cuda2hip-porting-kit"
version = "0.1.0"
description = "CUDA to HIP porting toolkit with automated migration helpers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "NexionDeve"}]
keywords = ["cuda", "hip", "rocm", "porting", "migration", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "mypy>=1.10.0", "pytest>=8.0.0"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
